90% of animation functionality, need to fix percent relative alignment

--- a/static/index.css
+++ b/static/index.css
@@ -11,11 +11,7 @@ html, body {
     flex-direction: row;
     margin-bottom: 0;
     z-index: 4;
-    height: 180px;
-}
-
-#nav-bottom {
-    z-index: 3;
+    height: 160px;
 }
 
 #main {
@@ -38,10 +34,10 @@ html, body {
     margin-left: 48px;
 }
 
-#links {
-    position: absolute;
-    right: 48px;
-}
+//#links {
+//    position: absolute;
+//    right: 48px;
+//}
 
 img {
     margin: 8px;
@@ -102,6 +98,13 @@ img {
     width: 67%;
     display: flex;
     flex-direction: column;
+    padding: 8px;
+}
+
+#keywords-dropdown {
+    margin: -8px 8px 0px 0px;
+    //margin-left: 8px;
+    //margin-top: -8px;
 }
 
 #division-container {
@@ -111,10 +114,6 @@ img {
 
 #toggle-view {
     right: 0;
-}
-
-#keyword-controls {
-    padding: 8px;
 }
 
 #keyword-controls, #division-controls {
@@ -145,12 +144,9 @@ img {
 }
 
 #suggested-keywords {
-    flex: 1;
-}
-
-.chips {
-    border-bottom: none;
     margin-bottom: -4px;
+    border: none;
+    flex: 1;
 }
 
 #controls {
@@ -168,21 +164,28 @@ div.tooltip {
     position: absolute;
     text-align: center;
     width: auto;
-    height: 2em;
-    padding: 6px;
-    font: 14px sans-serif;
     background: white;
     border: 0px;
     border-radius: 2px;
     pointer-events: none;
 }
 
-#grant-data {
-    width: 67%;
+div.tooltip tr {
+    line-height: 0.25;
+    border: none;
 }
 
-#divisions-table thead {
+
+#grant-data {
+    width: 75%;
+}
+
+thead {
     line-height: 0.75;
+}
+
+th {
+    padding-left: 8px;
 }
 
 .sort-desc, .sort-asc {
@@ -195,8 +198,8 @@ div.tooltip {
     border-width: 5px 5px 5px 5px;
     border-color: black transparent transparent transparent;
     position: absolute;
-    left: -1em;
-    top: 1.7em;
+    left: -0.3em;
+    top: 1.25em;
 }
 
 .sort-asc:before {
@@ -205,8 +208,8 @@ div.tooltip {
     border-width: 5px 5px 5px 5px;
     border-color: transparent transparent black transparent;
     position: absolute;
-    left: -1em;
-    top: 1.3em;
+    left: -0.3em;
+    top: 0.9em;
 }
 
 //#grant-table {
@@ -215,10 +218,18 @@ div.tooltip {
 //}
 
 #keywords-autocomplete {
+    border-bottom: 1px solid rgba(255, 255, 255, 0.7);
     margin: 0;
-    border-bottom: none;
     overflow-y: auto;
-    height: 9em;
+    max-height: 100%;
+}
+
+#keywords-autocomplete input {
+    width: 100% !important;
+}
+
+#keywords-autocomplete.focus {
+    border-bottom: 1px solid white;
 }
 
 #csv-download { 
